# caj2pdf-qt

./: .editorconfig  .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CMakeLists.txt  CNAME  README.md  _config.yml  app.rc  build-unix.sh  build-windows.py  build.py  build.sh  caj2pdf.diff  mupdf.diff  prepare.py
.github/workflows/: build-macos.yml  build-windows.yml  jekyll-gh-pages.yml  pages.yml
diff/: Info.plist.diff
icons/: convert.icns
include/: caj2pdf.h  caj2pdf.hpp
patches/: caj2pdf.diff
src/: .gitignore  CMakeLists.txt  app.rc  caj2pdf.cpp  caj2pdf.h  caj2pdf.ui  convert.cpp  events.cpp  framelessWindow.cpp  framelessWindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  page1.cpp  page2.cpp  page3.cpp  qssreader.cpp  qssreader.h  resource.qrc  slotsMain.cpp  slotsPage1.cpp  slotsPage2.cpp  slotsPage3.cpp  ui.cpp  uiMain.cpp  uiPage1.cpp  uiPage2.cpp  uiPage3.cpp
src/css/: mainwindow.css
src/slots/: main.cpp  page1.cpp  page2.cpp  page3.cpp
src/threads/: conversion.cpp  convertion.cpp  execution.cpp
src/ui/: main.cpp  page1.cpp  page3.cpp
